# CodaBench

./: .gitignore  README.md
bigcode-evaluation-harness/: .gitignore  README.md  bigcoeh-deepseek-coder-33b-instruct-humaneval.slurm  bigcoeh-deepseek-coder-33b-instruct-multiple.slurm  bigcoeh-deepseek-coder-6.7b-instruct-mbpp.slurm  bigcoeh-deepseek-coder-6.7b-instruct-multiple.slurm  bigcoeh-deepseekV2-humaneval.slurm  bigcoeh-dolphincoder-starcoder2-15b-humaneval.slurm  bigcoeh-eval-deepseek-coder-33b-instruct-humaneval.slurm  bigcoeh-eval-deepseek-coder-33b-instruct-multiple.slurm  bigcoeh-eval-deepseekV2-humaneval.slurm  bigcoeh-eval-dolphincoder-starcoder2-15b-humaneval.slurm  bigcoeh-eval-mixtral-8x7B-instruct-v0.1-humaneval.slurm  bigcoeh-eval-mixtral-8x7B-instruct-v0.1-mbpp.slurm  bigcoeh-eval-starcoder-mbpp.slurm  bigcoeh-eval-starcoder-multiple.slurm  bigcoeh-eval-starcoder2-15b-humaneval.slurm  bigcoeh-eval-starcoder2-15b-humaneval2.slurm  bigcoeh-eval-starcoder2-15b-instruct-humaneval.slurm  bigcoeh-eval-starcoder2-15b-instruct-t0-humaneval.slurm  bigcoeh-eval-starcoder2-15b-mbpp.slurm  bigcoeh-eval-starcoder2-15b-multiple.slurm  bigcoeh-eval-starcoder2-3b-humaneval.slurm  bigcoeh-eval-starcoder2-3b-mbpp.slurm  bigcoeh-eval-starcoder2-3b-multiple.slurm  bigcoeh-eval-starcoder2-7b-humaneval.slurm  bigcoeh-eval-starcoder2-7b-mbpp.slurm  bigcoeh-eval-starcoder2-7b-multiple.slurm  bigcoeh-eval-starcoder3-3b-humaneval.slurm  bigcoeh-eval-starcoder3_3b-humaneval.slurm  (+22 more)
code-llama-bench/: .pre-commit-config.yaml  README.md  pyproject.toml
hugging-face-model-bench/: CONTRIBUTING.md  README.md  benchmark.slurm  pyproject.toml
hugging-face-model-bench/parameters/: codellama-7b-hf.json
hugging-face-model-bench/src/hfmodelbench/: cli.py  humanevalx.py  utils.py
(+56 files in other folders)
