[tool.poetry]
name = "code-llama-bench"
version = "0.1.0"
description = "Code Llama Benchmark"
authors = ["Julien Tourille <julien.tourille@cea.fr"]
readme = "README.md"
packages = [
    { include = "codellamabench", from = "src"},
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
